# personal-ai-system

./: .gitignore  AGENT_INTEGRATION.md  ARCHITECTURE_COMPARISON.md  CLAUDE-legacy-backup.md  CLAUDE.md  CLEANUP-PLAN.md  COMPREHENSIVE_ARCHITECTURE_PLAN.md  MIGRATION-PLAN.md  MIGRATION_PLAN.md  NETWORK_CONFIGURATION.md  README.md  docker-compose.yml  linkedin-article-comprehensive.md  package-lock.json  risk-agents-app-implementation-plan.md
.claude/: CLAUDE.md
risk-agents-app/: .gitignore  (+7 more)
risk-agents-app/backend/: README.md  pyproject.toml
risk-agents-app/backend/.claude/skills/change-agent/action-item-tracking/: SKILL.md
risk-agents-app/backend/.claude/skills/change-agent/communication-plan-generator/: SKILL.md
risk-agents-app/backend/.claude/skills/change-agent/decision-log-generator/: SKILL.md
risk-agents-app/backend/.claude/skills/change-agent/meeting-minutes-capture/: SKILL.md
risk-agents-app/backend/agent/: __init__.py  agent_client.py  context_manager.py  knowledge_loader.py  knowledge_manager.py  skills_loader.py
risk-agents-app/backend/api/: api_server.py  auth.py  connection_manager.py  dependencies.py  exceptions.py  middleware.py  rate_limit.py  websocket_handler.py
risk-agents-app/backend/api/routes/: __init__.py  auth.py  context.py  knowledge.py  query.py  skills.py
risk-agents-app/backend/context/sessions/: 3d6c2c07-0d55-4011-97a9-659f8cc720b3.json  f86a5dfe-ed2a-44d2-8e14-33addfac6387.json
risk-agents-app/backend/knowledge/: KNOWLEDGE_TEMPLATE.md
risk-agents-app/backend/knowledge/change-agent/meeting-management/: action-items-standards.md  decision-capture.md  meeting-types.md
risk-agents-app/backend/knowledge/change-agent/meta/: knowledge-evolution.md
risk-agents-app/backend/knowledge/market-risk/policies/: stress-testing-framework.md  var-policy.md
(+468 files in other folders)
